Fixed double scroll bar on lightbox pages. Fixed spacing on the portfolio pieces and added smooth scrolling for mobile.

--- a/css/general.css
+++ b/css/general.css
@@ -386,6 +386,7 @@ h3 {
   width: 100%;
   transition: all .1s ease;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 .portfolio-slide-open:target {
@@ -460,7 +461,7 @@ h3 {
 
 .text img {
   margin-bottom: 1em;
-  width: 90%;
+  width: 100%;
 }
 
 .footer {
